    * OpenSSL now supports SNI (all others already do)
  * Additional features for Application Performance Monitoring:
    * mongoc_topology_description_has_writable_server
    * mongoc_topology_description_has_readable_server
  * connectTimeoutMS timer now begins after DNS resolution, and resets
    for each interface attempted (e.g., if the driver first tries IPv6,
    then IPv4).
  * mongoc_collection_find no longer treats the "filter" key specially in
    queries - querying for a document with a key named "filter" is the same
    now as any other key.
  * The server description parameter to the following functions is "const":
    * mongoc_server_description_host
    * mongoc_server_description_id
    * mongoc_server_description_ismaster
    * mongoc_server_description_round_trip_time
    * mongoc_server_description_type
  * Exported symbols are no longer declared in seperate export files.
    This could break ABI with applications using clang, which previously
    exported symbols from the internal private ABI.
  * mongoc no longer crashes when multi roundtrip bulk operation fails.
  * Added support for the new readConcernLevel "linearizable".

Removed configure flags:
  * --enable-experimental has been removed and all of its features
    are always available now
  * --enable-hardening has been removed. The flag never actually enabled
    any hardening features and has therefore been removed

Thanks to everyone who contributed to the development of this release.

  * Everyone

Farewell,

    A. Jesse Jiryu Davis


mongo-c-driver 1.4.0
====================

It is my pleasure to announce the release of mongo-c-driver 1.4.0.

TLS
---

The driver can now use the native TLS and crypto functions included in Mac OS X
and Windows. OpenSSL is no longer required for TLS or authentication on Mac or
Windows. By default, OpenSSL is used if available, the default will switch in
version 2.0 to prefer native TLS.

For native TLS on Mac:

  ./configure --enable-ssl=darwin
